fix host not found

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
                 <p id="message"></p>
             </div>
 
+            <div class="col-10 mt-10">
+                <label for="host-id">
+                    <span>انتخاب هاست برای دانلود</span>
+                    <select id="host-id" name="host-id">
+                        <option value="0">هاست 1</option>
+                        <option value="1">هاست 2</option>
+                    </select>
+                    <p>اگر در زمان دانلود به مشکل پیدا نشدن لینک برورد کردید ممکن است با تغیر سرور مشکل رفع شود.</p>
+                </label>
+               
+            </div>
+
             <div class="col-10">
                 <input type="text" id="input-link">
             </div>
